; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath9k/extr_debug_sta.c_ath9k_sta_add_debugfs.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath9k/extr_debug_sta.c_ath9k_sta_add_debugfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211_hw = type { i32 }
%struct.ieee80211_vif = type { i32 }
%struct.ieee80211_sta = type { i64 }
%struct.dentry = type { i32 }
%struct.ath_node = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"node_aggr\00", align 1
@fops_node_aggr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"node_recv\00", align 1
@fops_node_recv = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ath9k_sta_add_debugfs(%struct.ieee80211_hw* %0, %struct.ieee80211_vif* %1, %struct.ieee80211_sta* %2, %struct.dentry* %3) #0 {
  %5 = alloca %struct.ieee80211_hw*, align 8
  %6 = alloca %struct.ieee80211_vif*, align 8
  %7 = alloca %struct.ieee80211_sta*, align 8
  %8 = alloca %struct.dentry*, align 8
  %9 = alloca %struct.ath_node*, align 8
  store %struct.ieee80211_hw* %0, %struct.ieee80211_hw** %5, align 8
  store %struct.ieee80211_vif* %1, %struct.ieee80211_vif** %6, align 8
  store %struct.ieee80211_sta* %2, %struct.ieee80211_sta** %7, align 8
  store %struct.dentry* %3, %struct.dentry** %8, align 8
  %10 = load %struct.ieee80211_sta*, %struct.ieee80211_sta** %7, align 8
  %11 = getelementptr inbounds %struct.ieee80211_sta, %struct.ieee80211_sta* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to %struct.ath_node*
  store %struct.ath_node* %13, %struct.ath_node** %9, align 8
  %14 = load %struct.dentry*, %struct.dentry** %8, align 8
  %15 = load %struct.ath_node*, %struct.ath_node** %9, align 8
  %16 = call i32 @debugfs_create_file(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 292, %struct.dentry* %14, %struct.ath_node* %15, i32* @fops_node_aggr)
  %17 = load %struct.dentry*, %struct.dentry** %8, align 8
  %18 = load %struct.ath_node*, %struct.ath_node** %9, align 8
  %19 = call i32 @debugfs_create_file(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 292, %struct.dentry* %17, %struct.ath_node* %18, i32* @fops_node_recv)
  ret void
}

declare dso_local i32 @debugfs_create_file(i8*, i32, %struct.dentry*, %struct.ath_node*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
